# navigation_fyp

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/lib/amcl/: amcl
logs/ipa_building_navigation/: build.cmake.002.log.stderr
logs/ipa_room_exploration/: build.cmake.001.log.stderr  build.cmake.002.log.stderr  build.make.011.log.stderr  build.make.013.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.039.log.stderr
logs/ipa_room_segmentation/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr
logs/libconcorde_tsp_solver/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/main_ttb/: build.check.003.log.stderr  build.check.004.log.stderr  build.make.229.log.stderr
src/main_ttb/: CMakeLists.txt
src/main_ttb/config/: config.yaml
src/main_ttb/include/: PreDefine.hpp
src/main_ttb/include/BotControl/: BotControl.hpp
src/main_ttb/include/PathPlan/: PathPlan.hpp
src/main_ttb/launch/: main_ttb.launch
src/main_ttb/map/: bw_conversion.py  diamond.pgm  diamond_small.pgm  lab_ipa.pgm  lab_ipa_small.pgm  map.pgm  map.yaml  map1.pgm  map1_small.pgm  map_square.pgm  map_square_small.pgm  straight_square_100x100.pgm  straight_square_300x300.pgm
src/main_ttb/scripts/: 2d_surface_plot.py  3d_surface_plot.py  led.py  movement_node.py  time_taken_estimation.py
src/main_ttb/worlds/: singlePillar.world  test_world_1.world
(+961 files in other folders)
